# CopyCan

./: .gitignore  Cargo.toml  Package.swift  README.md  create_app_bundle.sh  create_dmg.sh  icon.icns  linkedin_story.md
.github/workflows/: release.yml  swift-release.yml
CopyCanSwift/Sources/CopyCanSwift/: main.swift
assets/: CopyCan.icns
src/: main.rs
