[package]
name = "CopyCan"
version = "0.1.0"
edition = "2024"
description = "A lightweight macOS clipboard history manager"
authors = ["Muhammad Firdaus"]

[dependencies]
arboard = "3.6.1"
global-hotkey = "0.7.0"
muda = "0.17.2"
tao = "0.35.0"
tray-icon = "0.22.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
